fix: change scrollbar library

--- a/src/components/CustomScrollbars/CustomScrollbars.scss
+++ b/src/components/CustomScrollbars/CustomScrollbars.scss
@@ -1,19 +1,17 @@
-.react-autoql-custom-scrollbars {
-  .custom-scrollbar-view {
-    height: calc(100% + 6px);
-    width: calc(100% + 6px);
+.react-autoql-custom-scrollbars.scrollbar-container {
+  .ps__rail-y,
+  .ps__rail-x {
+    background-color: transparent;
+
+    &:hover,
+    &.ps--clicking {
+      background-color: transparent;
+    }
+
+    .ps__thumb-y,
+    .ps__thumb-x {
+      background-color: var(--react-autoql-highlight-color);
+      opacity: 0.5;
+    }
   }
-}
-
-::-webkit-scrollbar {
-  -webkit-appearance: none;
-  width: 6px;
-  height: 6px;
-}
-
-::-webkit-scrollbar-thumb,
-.rc-scrollbars-container .rc-scrollbars-track .thumb-vertical,
-.rc-scrollbars-container .rc-scrollbars-track .thumb-horizontal {
-  border-radius: 3px !important;
-  background-color: var(--react-autoql-scrollbar-color) !important;
 }
