--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -22,13 +22,17 @@
     margin-bottom: 10px;
   }
 
-  .data-preview-scroll-container,
-  .custom-scrollbar-view {
+  .data-preview-scroll-container {
     width: 100%;
     height: 100%;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: auto;
+  }
+
+  .react-autoql-custom-scrollbars {
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   .data-explorer-data-preview {
